Fix lst card overflow

--- a/assets/css/yrityksille.css
+++ b/assets/css/yrityksille.css
@@ -133,6 +133,12 @@
     {
         text-align: justify;
         padding: 20px;
+        padding-top: 5px;
+        height: 210px;
+        overflow: hidden;
+        font-family: opensans;
+        font-weight: 500;
+        font-size: 1.1rem;
     }
 
     
